# attitude_libraries

./: CMakeLists.txt  README.md  package.xml
include/attitude_libraries/controllers/: passivityBasedAdaptiveControl.h
include/attitude_libraries/filters/: AHRSKalmanFilter.h  multiplicativeExtendedKalmanFilter.h
include/attitude_libraries/quaternions/: quaternionMath.h
include/attitude_libraries/registry/: controllerFunctionRegistry.h  filterFunctionRegistry.h
include/attitude_libraries/types/: controllerTypes.h  filterTypes.h  typenames.h
include/attitude_libraries/utils/: attitudeUtils.h  controlUtils.h
